refactored and made similar to deployment workflwo

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -17,7 +17,7 @@ on:
         type: string
         required: true  
     secrets:
-      PUBLISH_PROFILE_SECRET:
+      AZURE_WEBAPP_PUBLISH_PROFILE:
         required: false
 
 jobs:
@@ -29,11 +29,11 @@ jobs:
 
       - name: writing secrets to file
         run: |
-          echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
+          echo "Publish profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}"
           echo "inputs app name: ${{ inputs.app-name }}"
           echo "inputs publish profile: ${{ inputs.publish-profile }}"
           echo "inputs db name: ${{ inputs.spring-db-name }}"
-          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
+          echo ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} > ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
           cat ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
 
       - name: Archive Secret File
