--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,7 +1,7 @@
 name: Main workflow
 on: push 
 jobs:
-  step1:
+  Matrix-creation:
     runs-on: ubuntu-latest
     environment: staging
     outputs:
@@ -11,23 +11,23 @@ jobs:
       id: matrix_setup
       run: echo "value=$(jq -r -c . <<< '${{vars.TENANT_DETAILS}}')" >> $GITHUB_OUTPUT
 
-  step2:
-    needs: [step1]
-    runs-on: ubuntu-latest
-    environment: staging
-    strategy:
-      matrix: 
-        include: ${{ fromJSON(needs.step1.outputs.matrix) }}
-    steps:
-    - name: Accessing matrix                                                                                                                                                                    
-      run: |
-        echo "MATRIX: ${{ toJSON(matrix) }}"
+  # Accessing-Matrix:
+  #   needs: [Matrix-creation]
+  #   runs-on: ubuntu-latest
+  #   environment: staging
+  #   strategy:
+  #     matrix: 
+  #       include: ${{ fromJSON(needs.Matrix-creation.outputs.matrix) }}
+  #   steps:
+  #   - name: Check
+  #     run: |
+  #       echo "MATRIX: ${{ toJSON(matrix) }}"
 
-  Secret_format_job:
-    needs: [step1, step2]
+  deployment:
+    needs: [Matrix-creation]
     strategy:
       matrix: 
-        include: ${{ fromJSON(needs.step1.outputs.matrix) }}
+        include: ${{ fromJSON(needs.Matrix-creation.outputs.matrix) }}
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
@@ -35,4 +35,4 @@ jobs:
       publish-profile: ${{ join(fromJSON(toJSON(matrix)).serviceDetails.*.publishProfileSecretName, ', ') }}
       spring-db-name: ${{ join(fromJSON(toJSON(matrix)).serviceDetails.*.springDatasourceUrl, ', ') }}
     secrets:
-      PUBLISH_PROFILE_SECRET: ${{ secrets[join(fromJSON(toJSON(matrix)).serviceDetails.*.publishProfileSecretName, ', ')] }}
+      AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets[join(fromJSON(toJSON(matrix)).serviceDetails.*.publishProfileSecretName, ', ')] }}
